pnl: switch to libdazzle from panel-gtk
Now that we have a dependency on libdazzle, we no longer need our vendored
panel-gtk.

--- a/libide/buildui/ide-build-log-panel.ui
+++ b/libide/buildui/ide-build-log-panel.ui
@@ -1,5 +1,5 @@
 <interface>
-  <template class="IdeBuildLogPanel" parent="PnlDockWidget">
+  <template class="IdeBuildLogPanel" parent="DzlDockWidget">
     <child>
       <object class="GtkBox">
         <property name="orientation">horizontal</property>
