--- a/libide/workbench/ide-layout-pane.ui
+++ b/libide/workbench/ide-layout-pane.ui
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.16 -->
-  <template class="IdeLayoutPane" parent="PnlDockBinEdge">
+  <template class="IdeLayoutPane" parent="DzlDockBinEdge">
     <child>
-      <object class="PnlDockStack" id="dock_stack">
+      <object class="DzlDockStack" id="dock_stack">
         <property name="expand">true</property>
         <property name="visible">true</property>
       </object>
