--- a/plugins/devhelp/gbp-devhelp-documentation-card.ui
+++ b/plugins/devhelp/gbp-devhelp-documentation-card.ui
@@ -9,20 +9,28 @@
         <property name="spacing">6</property>
         <property name="visible">true</property>
         <child>
-          <object class="GtkLabel" id="title">
+          <object class="GtkLabel" id="header">
             <property name="xalign">0.0</property>
             <property name="visible">true</property>
-            <attributes>
-              <attribute name="weight" value="bold"/>
-            </attributes>
           </object>
         </child>
         <child>
-          <object class="GtkLabel" id="message">
+          <object class="GtkLabel" id="text">
             <property name="xalign">0.0</property>
-            <property name="visible">true</property>
+            <property name="visible">false</property>
             <style>
               <class name="dim-label"/>
+            </style>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="button">
+            <property name="label" translatable="yes">_Show more</property>
+            <property name="use-underline">true</property>
+            <property name="visible">true</property>
+            <property name="width-request">50</property>
+            <style>
+              <class name="flat"/>
             </style>
           </object>
         </child>
